Minor changes as I'm updating BEA2023 paper

--- a/20230507_dissertation.bib
+++ b/20230507_dissertation.bib
@@ -1097,4 +1097,28 @@
   pages     = {1--7},
 }
 
+@Conference{steedle2023,
+  author       = {Jeffrey Steedle and Shalini Kapoor and Shichao Wang},
+  title        = {What’s the DIF? Item Properties Associated with DIF on the ACT},
+  year         = {2023},
+  organization = {National Council on Measurement in Education},
+}
+
+@Article{cai_item_2016,
+  author  = {Cai, Li and Choi, Kilchan and Hansen, Mark and Harrell, Lauren},
+  journal = {Annual Review of Statistics and Its Application},
+  title   = {Item response theory},
+  year    = {2016},
+  note    = {Publisher: Annual Reviews},
+  pages   = {297--321},
+  volume  = {3},
+}
+
+@Book{kwako2023mitigating,
+  author    = {Kwako, Alexander},
+  publisher = {University of California, Los Angeles},
+  title     = {Mitigating Gender and Racial Bias in Automated English Speaking Assessment},
+  year      = {2023},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
